--- a/app.css
+++ b/app.css
@@ -205,8 +205,12 @@ body {
   grid-gap: 0 !important;
 }
 
+.searchBlock {
+  grid-row: 3;
+  grid-column: 1 / span 4;
+
 .linksBlock {
-  grid-row: 3 / span 2;
+  grid-row: 4 / span 2;
   grid-column: 1 / span 4;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
