--- a/app.css
+++ b/app.css
@@ -208,6 +208,10 @@ body {
 .searchBlock {
   grid-row: 3;
   grid-column: 1 / span 4;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .linksBlock {
